# aceteam-aep

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  NOTICE  README.md  docker-compose.sidecar.yml  flake.nix  pyproject.toml
.github/workflows/: docker-publish.yml  publish.yml
docs/: business-model.md  workshop-guide.md
docs/engineering/: architecture.md  mcp-integration.md  safety-pipeline.md
docs/protocol/: aep-attestation.md  aep-confidence.md
docs/superpowers/plans/: 2026-03-21-layer1-production.md  2026-03-21-layer2-protocol.md  2026-03-21-trust-engine-wrapper.md
docs/superpowers/specs/: 2026-04-02-mcp-gateway-onramp-design.md
examples/: governance_sdk.py  headers_integration.sh  quickstart.py
examples/policies/: permissive.yaml  production.yaml  strict.yaml
policies/: clawcamp.yaml  education.yaml  finance.yaml  healthcare.yaml  legal.yaml  pipeline.yaml  safety-off.yaml  startup.yaml
scripts/: release.sh
src/aceteam_aep/: __init__.py  agent.py  attestation.py  budget.py  cli.py  client.py  config.py  costs.py  embeddings.py  enforcement.py  envelope.py  envelope_builder.py  envelope_helpers.py  factory.py  feedback.py  governance.py  instrument.py  judge_service.py  mcp.py  mcp_gateway.py  models.py  pricing.py  prompt.py  protocols.py  spans.py  stream.py  structured.py  text_splitter.py  tools.py  top.py  types.py  wrap.py
src/aceteam_aep/dashboard/: __init__.py  app.py
src/aceteam_aep/dashboard/templates/: index.html
src/aceteam_aep/governance_engine/: __init__.py  classifier.py  policy_engine.py  redactor.py
src/aceteam_aep/observability/: __init__.py  events.py  incidents.py  store.py
src/aceteam_aep/observability/views/: __init__.py  timeline.py  topology.py  traffic.py
src/aceteam_aep/provenance/: __init__.py  source_extractor.py  tracker.py
src/aceteam_aep/providers/: __init__.py  anthropic.py  errors.py  google.py  ollama.py  openai.py  xai.py
src/aceteam_aep/proxy/: __init__.py  app.py  cli.py  headers.py  logutil.py  openclaw_sync.py  redis_publisher.py  state_manager.py  state_persistence.py  streaming.py
src/aceteam_aep/safety/: __init__.py  agent_threat.py  base.py  content.py  cost_anomaly.py  custom.py  ferpa.py  pii.py  pipeline.py  secrets.py  trust_engine.py
src/aceteam_aep/utils/: __init__.py  async_bridge.py
tests/: conftest.py  test_agent.py  test_attestation.py  test_budget.py  test_cli.py  test_config.py  test_connect_cli.py  test_costs.py  test_custom_policies_api.py  test_dashboard.py  test_dashboard_views.py  test_e2e_proxy.py  test_embeddings.py  test_enforcement.py  test_envelope_builder.py  test_feedback.py  test_feedback_api.py  test_governance.py  test_instrument.py  test_judge_service.py  test_mcp_gateway.py  test_models.py  test_observability_dashboard_routes.py  test_observability_events.py  test_observability_incidents.py  test_observability_proxy_integration.py  test_observability_store.py  test_observability_views.py  test_openclaw_sync.py  test_pricing.py  test_prompt.py  test_proxy.py  test_proxy_headers.py  test_proxy_streaming.py  test_redis_publisher.py  test_safety_toggle.py  test_setup_cli.py  test_spans.py  test_state_manager.py  test_state_persistence.py  (+8 more)
tests/integration/: README.md  conftest.py  test_crewai.py  test_dashboard_attestation.py  test_dspy.py  test_langchain.py  test_openai_sdk.py  test_safety_toggle.py  test_signed_proxy.py  test_trust_engine_live.py
tests/test_governance_engine/: test_classifier.py  test_policy_engine.py  test_redactor.py
tests/test_provenance/: test_source_extractor.py  test_tracker.py
tests/test_providers/: test_anthropic.py  test_google.py  test_ollama.py  test_openai.py  test_xai.py
tests/test_safety/: test_base.py  test_content.py  test_cost_anomaly.py  test_ferpa.py  test_pii.py  test_pipeline.py  test_secrets.py
