[project]
name = "aceteam-aep"
version = "0.6.0"
description = "Agentic Execution Protocol™ (AEP™) - trust & safety infrastructure for AI agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [{ name = "AceTeam AI", email = "contact@aceteam.ai" }]
keywords = ["aep", "ai", "agents", "llm", "cost-tracking"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.65.0,<2.0.0",
    "anthropic>=0.45.0,<1.0.0",
    "google-genai>=1.0.0,<2.0.0",
    "httpx>=0.28.0",
    "pydantic>=2.11.0",
]

[project.optional-dependencies]
xai = ["openai>=1.65.0,<2.0.0"]
ollama = ["ollama>=0.4.0,<1.0.0"]
safety = ["transformers>=4.40", "torch>=2.0"]
dashboard = ["uvicorn>=0.30", "jinja2>=3.1", "starlette>=0.38"]
proxy = ["aceteam-aep[dashboard]"]
mcp = ["fastmcp>=2.0"]
yaml = ["pyyaml>=6.0"]
feedback = ["lancedb>=0.30"]
top = ["rich>=13.0"]
all = ["aceteam-aep[xai,ollama,safety,dashboard,proxy,yaml,mcp,feedback,top]"]
dev = [
    "aceteam-aep[all]",
    "httpx>=0.28",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.11",
    "pyright>=1.1",
]

[project.scripts]
aceteam-aep = "aceteam_aep.proxy.cli:main"

[project.urls]
Homepage = "https://aceteam.ai"
Repository = "https://github.com/aceteam-ai/aceteam-aep"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aceteam_aep"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["UP047"]  # Allow TypeVar over PEP 695 type params for compatibility

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
